# pack

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  test.py
.github/workflows/: ci.yml  debug.yml  release.yml  test.yml
ci/: before_deploy.sh  checksum.sh  tar.sh
contrib/: _pack  pack.bash  pack.fish
src/: cli.rs  echo.rs  error.rs  git.rs  main.rs  package.rs  task.rs  utils.rs
src/cmd/: config.rs  generate.rs  help.rs  install.rs  list.rs  mod.rs  move_cmd.rs  uninstall.rs  update.rs  version.rs
test/.pack/: packfile
