[package]
name = "pack"
version = "0.2.0"
authors = ["maralla <maralla.ai@gmail.com>"]

[dependencies]
lazy_static = "0.1.*"
docopt = "0.7"
rustc-serialize = "0.3"
yaml-rust = "0.3.5"
walkdir = "1"
termion = "1.0"
num_cpus = "1.0"
chan = "0.1.19"

[dependencies.git2]
version = "0.6.8"
default-features = false
features = ["ssh", "https"]
